fix: corrigir lógica de mapeamento da nota fiscal
